Estrategia estática de selección y distribución de ETF según el criterio media-varianza

--- a/optimization_criterions.ipynb
+++ b/optimization_criterions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "        df(type ndarray numpy): Retornos de los activos\n",
     "    \"\"\"\n",
     "    # Parámetros\n",
-    "    Lambda = 3\n",
+    "    Lambda = 1\n",
     "    W = 1\n",
     "    Wbar = 1 + 0.25/100\n",
     "    # Calcular la rentabilidad de la cartera\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "        df(type ndarray numpy): Retornos de los activos\n",
     "    \"\"\"\n",
     "    # Parámetros\n",
-    "    Lambda = 3\n",
+    "    Lambda = 1\n",
     "    W = 1\n",
     "    Wbar = 1 + 0.25 / 100\n",
     "    # Calcular la rentabilidad de la cartera\n",
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SR_criterion(weight, df):\n",
+    "def SR_criterion(weights, df):\n",
     "    \"\"\"\n",
     "    Ountput:\n",
     "        optimización del criterio (ratio de Sharpe) de la cartera\n",
@@ -95,7 +95,7 @@
     "        df(type ndarray numpy): Retornos de los activos\n",
     "    \"\"\"\n",
     "    # Calcular la rentabilidad de la cartera\n",
-    "    portfolio_return = np.multiply(df, np.transpose(weight))\n",
+    "    portfolio_return = np.multiply(df, np.transpose(weights))\n",
     "    portfolio_return = portfolio_return.sum(axis=1)\n",
     "    # Calcular la media y la volatilidad de la cartera\n",
     "    mean = np.mean(portfolio_return, axis=0)\n",
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SOR_criterion(weight, df):\n",
+    "def SOR_criterion(weights, df):\n",
     "    \"\"\"\n",
     "    Ountput:\n",
     "        optimización del criterio (ratio de Sortino) de la cartera\n",
@@ -121,7 +121,7 @@
     "        df(type ndarray numpy): Retornos de los activos\n",
     "    \"\"\"\n",
     "    # Calcular la rentabilidad de la cartera\n",
-    "    portfolio_return = np.multiply(df, np.transpose(weight))\n",
+    "    portfolio_return = np.multiply(df, np.transpose(weights))\n",
     "    portfolio_return = portfolio_return.sum(axis=1)\n",
     "    # Calcular la media y la volatilidad de la cartera\n",
     "    mean = np.mean(portfolio_return, axis=0)\n",
@@ -131,6 +131,34 @@
     "    Sortino = -Sortino\n",
     "    return Sortino"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def beta_function(portfolio, benchmark):\n",
+    "    \"\"\"\n",
+    "    Ouput:\n",
+    "        Métrica Beta CAPM\n",
+    "    Inputs:\n",
+    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
+    "        benchmark (type dataframe pandas): Retornos del índice de referencia\n",
+    "    \"\"\"\n",
+    "    # Concatenar el portfolio y el índice\n",
+    "    join = pd.concat((portfolio, benchmark), axis=1).dropna()\n",
+    "    # Covarianza y varianza\n",
+    "    cov, var = np.cov(join, rowvar=False)[1]\n",
+    "    return cov/var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
