Selección de portfolio de ETF según criterio el Ratio de Sharpe

--- a/optimization_criterions.ipynb
+++ b/optimization_criterions.ipynb
@@ -40,8 +40,7 @@
     "                 Lambda/2*Wbar**(-1-Lambda)*\n",
     "                 W**2*std**2\n",
     "                 )\n",
-    "    criterion = -criterion\n",
-    "    return criterion"
+    "    return -criterion"
    ]
   },
   {
@@ -76,8 +75,7 @@
     "        + Lambda * (Lambda + 1) / (6) * Wbar**(-2 - Lambda) * W**3 * skewness\\\n",
     "        - Lambda * (Lambda + 1) * (Lambda + 2) / (24) * Wbar**(-3 - Lambda)\\\n",
     "        * W**4 * kurt\n",
-    "    criterion = -criterion\n",
-    "    return criterion"
+    "    return -criterion"
    ]
   },
   {
@@ -102,8 +100,7 @@
     "    std=np.std(portfolio_return, axis=0)\n",
     "    # Calcular el opuesto al ratio de Sharpe\n",
     "    sharpe = mean / std\n",
-    "    sharpe=-sharpe\n",
-    "    return sharpe"
+    "    return -sharpe"
    ]
   },
   {
@@ -128,8 +125,7 @@
     "    std = np.std(portfolio_return[portfolio_return < 0], axis=0)\n",
     "    # Calcular el opuesto al ratio de Sortino\n",
     "    Sortino = mean / std\n",
-    "    Sortino = -Sortino\n",
-    "    return Sortino"
+    "    return -Sortino"
    ]
   },
   {
@@ -158,7 +154,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def alpha_function(portfolio, benchmark, timeframe=252):\n",
+    "    \"\"\"\n",
+    "    Ouput:\n",
+    "        Métrica Alpha CAPM\n",
+    "    Inputs:\n",
+    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
+    "        benchmark (type dataframe pandas): Retornos del índice de referencia\n",
+    "    \"\"\"\n",
+    "    # Calcula la beta\n",
+    "    beta = beta_function(portfolio, benchmark)\n",
+    "    mean_stock_return = portfolio.values.mean() * timeframe\n",
+    "    mean_market_return = benchmark.values.mean() * timeframe\n",
+    "    return mean_stock_return - beta * mean_market_return"
+   ]
   }
  ],
  "metadata": {
