Funciones del ratio Sharpe y Sortino y Drawdown

--- a/optimization_criterions.ipynb
+++ b/optimization_criterions.ipynb
@@ -169,6 +169,72 @@
     "    mean_market_return = benchmark.values.mean() * timeframe\n",
     "    return mean_stock_return - beta * mean_market_return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sharpe_function(portfolio, timeframe=252):\n",
+    "    \"\"\"\n",
+    "    Output:\n",
+    "        Métrica del ratio de Sharpe\n",
+    "    Inputs:\n",
+    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
+    "        timeframe (type int): Factor de anualización\n",
+    "    \"\"\"\n",
+    "    # Media y desviación típica de los retornos anualizados \n",
+    "    portfolio = portfolio.values\n",
+    "    mean = portfolio.mean() * timeframe\n",
+    "    std = portfolio.std() * np.sqrt(timeframe)\n",
+    "    return mean / std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sortino_function(portfolio, timeframe=252):\n",
+    "    \"\"\"\n",
+    "    Output:\n",
+    "        Métrica del ratio de Sharpe\n",
+    "    Inputs:\n",
+    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
+    "        timeframe (type int): Factor de anualización\n",
+    "    \"\"\"\n",
+    "    # Tomar valores a la baja\n",
+    "    portfolio = portfolio.values\n",
+    "    downward = portfolio[portfolio < 0]\n",
+    "    mean = portfolio.mean() * timeframe\n",
+    "    std = downward.std() * np.sqrt(timeframe)\n",
+    "    return mean / std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drawdown_function(portfolio):\n",
+    "    \"\"\"\n",
+    "    Output: \n",
+    "        Drawdown\n",
+    "    Inputs:\n",
+    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
+    "    \"\"\"\n",
+    "    # Calcular el producto acumulado de los rendimientos\n",
+    "    cum_rets = (portfolio + 1).cumprod()\n",
+    "    # Calcular el máximo producto acumulado\n",
+    "    running_max = np.maximum.accumulate(cum_rets.dropna())\n",
+    "    running_max[running_max < 1] = 1\n",
+    "    # Calcular el drawdown\n",
+    "    drawdown = (cum_rets / running_max - 1)\n",
+    "    return drawdown"
+   ]
   }
  ],
  "metadata": {
