Métrica CR: Contribución al Riesgo de cada activo de la cartera

--- a/optimization_criterions.ipynb
+++ b/optimization_criterions.ipynb
@@ -25,7 +25,7 @@
     "        df(type ndarray numpy): Retornos de los activos\n",
     "    \"\"\"\n",
     "    # Parámetros\n",
-    "    Lambda = 1\n",
+    "    Lambda = 0\n",
     "    W = 1\n",
     "    Wbar = 1 + 0.25/100\n",
     "    # Calcular la rentabilidad de la cartera\n",
@@ -50,31 +50,32 @@
    "outputs": [],
    "source": [
     "def SK_criterion(weights, df):\n",
-    "    \"\"\"\n",
-    "    Ountput:\n",
-    "        optimización del criterio (media-varianza sesgo kurtosis) de la cartera\n",
-    "    Inputs:\n",
-    "        weights(type ndarray numpy): Pesos de la cartera\n",
-    "        df(type ndarray numpy): Retornos de los activos\n",
+    "    \"\"\" \n",
+    "    Output: \n",
+    "        optimization porfolio criterion                                   \n",
+    "    Inputs: \n",
+    "        weight (type ndarray numpy): Wheight for portfolio               \n",
+    "        data (type ndarray numpy): Returns of stocks                     \n",
     "    \"\"\"\n",
     "    # Parámetros\n",
-    "    Lambda = 1\n",
+    "    Lambda = 0\n",
     "    W = 1\n",
     "    Wbar = 1 + 0.25 / 100\n",
     "    # Calcular la rentabilidad de la cartera\n",
     "    portfolio_return = np.multiply(df, np.transpose(weights))\n",
     "    portfolio_return = portfolio_return.sum(axis=1)\n",
-    "    # Calcular la media, la volatilidad, el sesgo y la curtosis de la cartera\n",
+    "    # # Calcular la media, volatilidad, skew y la kurtosis de la cartera\n",
     "    mean = np.mean(portfolio_return, axis=0)\n",
     "    std = np.std(portfolio_return, axis=0)\n",
     "    skewness = skew(portfolio_return, 0)\n",
     "    kurt = kurtosis(portfolio_return, 0)\n",
     "    # Calcular el criterio\n",
-    "    criterion = Wbar**(1 - Lambda) / (1 + Lambda) + Wbar**(-Lambda)\\\n",
-    "        * W * mean - Lambda / 2 * Wbar**(-1 - Lambda) * W**2 * std**2\\\n",
-    "        + Lambda * (Lambda + 1) / (6) * Wbar**(-2 - Lambda) * W**3 * skewness\\\n",
-    "        - Lambda * (Lambda + 1) * (Lambda + 2) / (24) * Wbar**(-3 - Lambda)\\\n",
-    "        * W**4 * kurt\n",
+    "    criterion = Wbar ** (1 - Lambda) / (1 + Lambda) + Wbar ** (-Lambda) \\\n",
+    "    * W * mean - Lambda / 2 * Wbar ** (-1 - Lambda) * W ** 2 * std ** 2 \\\n",
+    "    + Lambda * (Lambda + 1) / (6) * Wbar ** (-2 - Lambda) * W ** 3 * skewness \\\n",
+    "    - Lambda * (Lambda + 1) * (Lambda + 2) / (24) * Wbar ** (-3 - Lambda) *\\\n",
+    "     W ** 4 * kurt\n",
+    "    \n",
     "    return -criterion"
    ]
   },
@@ -234,6 +235,86 @@
     "    # Calcular el drawdown\n",
     "    drawdown = (cum_rets / running_max - 1)\n",
     "    return drawdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def VaR_function(theta, mu, sigma):\n",
+    "    \"\"\"\n",
+    "    Output:\n",
+    "        VaR\n",
+    "    Inputs:\n",
+    "        theta (type float): umbral del error en %\n",
+    "        mu (type float): retorno esperado de la cartera\n",
+    "        sigma (type float): volatilidad de la cartera\n",
+    "    \"\"\"\n",
+    "    # Número de simulaciones\n",
+    "    n = 100000\n",
+    "    # Encontrar los valores para el umbral de error theta\n",
+    "    t = int(n * theta)\n",
+    "    # Crear un vector con n simulaciones de la ley normal\n",
+    "    vec = pd.DataFrame(np.random.normal(mu, sigma, size=(n,)),\n",
+    "                       columns=['Simulations'])\n",
+    "    # Ordena los valores y encuentra el valor theta%\n",
+    "    var = vec.sort_values(by=\"Simulations\").iloc[t].values[0]\n",
+    "    return var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cVaR_function(theta, mu, sigma):\n",
+    "    \"\"\"\n",
+    "    Output:\n",
+    "        cVaR\n",
+    "    Inputs:\n",
+    "        theta (type float): umbral del error en %\n",
+    "        mu (type float): retorno esperado de la cartera\n",
+    "        sigma (type float): volatilidad de la cartera\n",
+    "    \"\"\"\n",
+    "    # Número de simulaciones\n",
+    "    n = 100000\n",
+    "    # Encontrar los valores para el umbral de error theta\n",
+    "    t = int(n * theta)\n",
+    "    # Crear un vector con n simulaciones de la ley normal\n",
+    "    vec = pd.DataFrame(np.random.normal(mu, sigma, size=(n,)),\n",
+    "                       columns=['Simulations'])\n",
+    "    # Ordena los valores y encuentra el valor theta%\n",
+    "    cvar = vec.sort_values(by=\"Simulations\").iloc[0:t, :].mean().values[0]\n",
+    "    return cvar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CR_function(weights, portfolio, benchmark):\n",
+    "    \"\"\"\n",
+    "    Output:\n",
+    "        Métrica de la contribución al riesgo\n",
+    "    Input:\n",
+    "        weights (type pandas.DataFrame): Pesos de la cartera\n",
+    "        portfolio (type pandas.DataFrame): Retornos de los activos\n",
+    "        benchmark (type pandas.DataFrame): Retornos del índice de referencia\n",
+    "    \"\"\"\n",
+    "    # Encontrar el número de activos en la cartera\n",
+    "    l = len(weights)\n",
+    "    # Calcular la contribución al riesgo de cada activo\n",
+    "    crs = []\n",
+    "    for i in range(l):\n",
+    "        cr = beta_function(portfolio.iloc[:, i], benchmark) * weights.iloc[i]\n",
+    "        crs.append(cr)\n",
+    "    # Normalizar por la suma de la contribución al riesgo\n",
+    "    return crs / np.sum(crs)"
    ]
   }
  ],
