función backtest completa

--- a/optimization_criterions.ipynb
+++ b/optimization_criterions.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,11 +132,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def beta_function(portfolio, benchmark):\n",
+    "def total_portfolio(weights, portfolio):\n",
+    "    portfolio = (pd.DataFrame(\n",
+    "    np.sum(\n",
+    "        np.multiply(\n",
+    "            portfolio[weights.index.to_list()].values,\n",
+    "            np.transpose(weights['Weights'].values)), \n",
+    "        axis=1),\n",
+    "    index=portfolio.index,\n",
+    "    columns=['portfolio'])\n",
+    "    )\n",
+    "    return portfolio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def beta_function(weights, portfolio, benchmark):\n",
     "    \"\"\"\n",
     "    Ouput:\n",
     "        Métrica Beta CAPM\n",
@@ -143,20 +163,21 @@
     "        portfolio (type dataframe pandas): Retornos de la cartera\n",
     "        benchmark (type dataframe pandas): Retornos del índice de referencia\n",
     "    \"\"\"\n",
+    "    portfolio = total_portfolio(weights, portfolio)\n",
     "    # Concatenar el portfolio y el índice\n",
     "    join = pd.concat((portfolio, benchmark), axis=1).dropna()\n",
     "    # Covarianza y varianza\n",
     "    cov, var = np.cov(join, rowvar=False)[1]\n",
-    "    return cov/var"
+    "    return cov / var"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def alpha_function(portfolio, benchmark, timeframe=252):\n",
+    "def alpha_function(weights, portfolio, benchmark, timeframe=252):\n",
     "    \"\"\"\n",
     "    Ouput:\n",
     "        Métrica Alpha CAPM\n",
@@ -165,7 +186,8 @@
     "        benchmark (type dataframe pandas): Retornos del índice de referencia\n",
     "    \"\"\"\n",
     "    # Calcula la beta\n",
-    "    beta = beta_function(portfolio, benchmark)\n",
+    "    beta = beta_function(weights, portfolio, benchmark)\n",
+    "    portfolio = total_portfolio(weights, portfolio)\n",
     "    mean_stock_return = portfolio.values.mean() * timeframe\n",
     "    mean_market_return = benchmark.values.mean() * timeframe\n",
     "    return mean_stock_return - beta * mean_market_return"
@@ -173,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sharpe_function(portfolio, timeframe=252):\n",
+    "def sharpe_function(weights, portfolio, timeframe=252):\n",
     "    \"\"\"\n",
     "    Output:\n",
     "        Métrica del ratio de Sharpe\n",
@@ -185,6 +207,7 @@
     "        portfolio (type dataframe pandas): Retornos de la cartera\n",
     "        timeframe (type int): Factor de anualización\n",
     "    \"\"\"\n",
+    "    portfolio = total_portfolio(weights, portfolio)\n",
     "    # Media y desviación típica de los retornos anualizados \n",
     "    portfolio = portfolio.values\n",
     "    mean = portfolio.mean() * timeframe\n",
@@ -194,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sortino_function(portfolio, timeframe=252):\n",
+    "def sortino_function(weights, portfolio, timeframe=252):\n",
     "    \"\"\"\n",
     "    Output:\n",
     "        Métrica del ratio de Sharpe\n",
@@ -206,6 +229,7 @@
     "        portfolio (type dataframe pandas): Retornos de la cartera\n",
     "        timeframe (type int): Factor de anualización\n",
     "    \"\"\"\n",
+    "    portfolio = total_portfolio(weights, portfolio)\n",
     "    # Tomar valores a la baja\n",
     "    portfolio = portfolio.values\n",
     "    downward = portfolio[portfolio < 0]\n",
@@ -216,17 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drawdown_function(portfolio):\n",
+    "def drawdown_function(weights, portfolio):\n",
     "    \"\"\"\n",
     "    Output: \n",
     "        Drawdown\n",
     "    Inputs:\n",
     "        portfolio (type dataframe pandas): Retornos de la cartera\n",
     "    \"\"\"\n",
+    "    portfolio = total_portfolio(weights, portfolio)\n",
     "    # Calcular el producto acumulado de los rendimientos\n",
     "    cum_rets = (portfolio + 1).cumprod()\n",
     "    # Calcular el máximo producto acumulado\n",
@@ -239,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,16 +331,94 @@
     "        portfolio (type pandas.DataFrame): Retornos de los activos\n",
     "        benchmark (type pandas.DataFrame): Retornos del índice de referencia\n",
     "    \"\"\"\n",
-    "    # Encontrar el número de activos en la cartera\n",
-    "    l = len(weights)\n",
     "    # Calcular la contribución al riesgo de cada activo\n",
     "    crs = []\n",
-    "    for i in range(l):\n",
-    "        cr = beta_function(portfolio.iloc[:, i], benchmark) * weights.iloc[i]\n",
+    "    for asset in weights.index.to_list():\n",
+    "        cr = beta_function(weights.loc[asset].to_frame().T, portfolio[asset].to_frame(), benchmark) * weights.iloc[i]\n",
     "        crs.append(cr)\n",
     "    # Normalizar por la suma de la contribución al riesgo\n",
     "    return crs / np.sum(crs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backtest_function(weights, portfolio, benchmark, timeframe=252):\n",
+    "    \"\"\"\n",
+    "    Output:\n",
+    "        Métricas\n",
+    "    Input:\n",
+    "        weights (type pandas.DataFrame): Pesos de la cartera\n",
+    "        portfolio (type pandas.DataFrame): Retornos de los activos\n",
+    "        benchmark (type pandas.DataFrame): Retornos del índice de referencia\n",
+    "        timeframe (type int): Factor de anualización\n",
+    "    \"\"\"\n",
+    "    # Calcular la BETA\n",
+    "    beta = beta_function(weights, portfolio, benchmark)\n",
+    "    # Calcular el ALPHA\n",
+    "    alpha = alpha_function(weights, portfolio, benchmark)\n",
+    "    # Calcular el Ratio de Sharpe\n",
+    "    sharpe = sharpe_function(weights, portfolio)\n",
+    "    # Calcular el Ratio de Sortino\n",
+    "    sortino = sortino_function(weights, portfolio)\n",
+    "    # Calcular el Drawdown\n",
+    "    drawdown = drawdown_function(weights, portfolio)\n",
+    "    # Calcular el CR\n",
+    "    cr = CR_function(weights, portfolio, benchmark)\n",
+    "    # Calcular el VaR\n",
+    "    portfolio = total_portfolio(weights, portfolio)\n",
+    "    mean = portfolio.mean() * timeframe\n",
+    "    std = portfolio.std() * np.sqrt(timeframe)\n",
+    "    theta = 0.05\n",
+    "    var = VaR_function(theta, mean, std) * 100.\n",
+    "    # Calcular el cVaR\n",
+    "    cvar = cVaR_function(theta, mean, std) * 100.\n",
+    "\n",
+    "    # Print de los resultados\n",
+    "    portfolio_weights = \"\\n\\t\" + \"\\n\\t\".join(f'{index}: {item*100:.2f}%' for index, item in weights['Weights'].items())\n",
+    "    print(f\"\"\"\n",
+    "    __________________________________________________\n",
+    "    Portfolio: {portfolio_weights}\n",
+    "    __________________________________________________\n",
+    "    Beta: {np.round(beta, 3)}\n",
+    "    Alpha: {np.round(alpha, 3)}\n",
+    "    Sharpe: {np.round(sharpe, 3)}\n",
+    "    Sortino: {np.round(sortino, 3)}\n",
+    "    ___________________________________________________\n",
+    "    VaR: {np.round(var, 3)}\n",
+    "    cVaR: {np.round(cvar, 3)}\n",
+    "    ___________________________________________________\n",
+    "    \"\"\")\n",
+    "    columns = weights.index.to_list()\n",
+    "    # Visualizaciones gráficas\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(portfolio.cumsum().sum(axis=1)*100.)\n",
+    "    plt.title(\"Retornos acumulados\", size=15)\n",
+    "    plt.ylabel(\"%\", size=15)\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.fill_between(drawdown.index, drawdown.iloc[:, 0]*100., 0, color='#E95751')\n",
+    "    plt.title(\"Drawdown\", size=15)\n",
+    "    plt.ylabel(\"%\", size=15)\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.bar(columns, cr.flatten()*100., color='#B96553')\n",
+    "    plt.title('Contribución al riesgo del portfolio', size=15)\n",
+    "    plt.ylabel('%', size=15)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
