funciones de backtest y criterios de optimización separadas

--- a/optimization_criterions.ipynb
+++ b/optimization_criterions.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
@@ -129,296 +128,6 @@
     "    Sortino = mean / std\n",
     "    return -Sortino"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def total_portfolio(weights, portfolio):\n",
-    "    portfolio = (pd.DataFrame(\n",
-    "    np.sum(\n",
-    "        np.multiply(\n",
-    "            portfolio[weights.index.to_list()].values,\n",
-    "            np.transpose(weights['Weights'].values)), \n",
-    "        axis=1),\n",
-    "    index=portfolio.index,\n",
-    "    columns=['portfolio'])\n",
-    "    )\n",
-    "    return portfolio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def beta_function(weights, portfolio, benchmark):\n",
-    "    \"\"\"\n",
-    "    Ouput:\n",
-    "        Métrica Beta CAPM\n",
-    "    Inputs:\n",
-    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
-    "        benchmark (type dataframe pandas): Retornos del índice de referencia\n",
-    "    \"\"\"\n",
-    "    portfolio = total_portfolio(weights, portfolio)\n",
-    "    # Concatenar el portfolio y el índice\n",
-    "    join = pd.concat((portfolio, benchmark), axis=1).dropna()\n",
-    "    # Covarianza y varianza\n",
-    "    cov, var = np.cov(join, rowvar=False)[1]\n",
-    "    return cov / var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def alpha_function(weights, portfolio, benchmark, timeframe=252):\n",
-    "    \"\"\"\n",
-    "    Ouput:\n",
-    "        Métrica Alpha CAPM\n",
-    "    Inputs:\n",
-    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
-    "        benchmark (type dataframe pandas): Retornos del índice de referencia\n",
-    "    \"\"\"\n",
-    "    # Calcula la beta\n",
-    "    beta = beta_function(weights, portfolio, benchmark)\n",
-    "    portfolio = total_portfolio(weights, portfolio)\n",
-    "    mean_stock_return = portfolio.values.mean() * timeframe\n",
-    "    mean_market_return = benchmark.values.mean() * timeframe\n",
-    "    return mean_stock_return - beta * mean_market_return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sharpe_function(weights, portfolio, timeframe=252):\n",
-    "    \"\"\"\n",
-    "    Output:\n",
-    "        Métrica del ratio de Sharpe\n",
-    "    Inputs:\n",
-    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
-    "        timeframe (type int): Factor de anualización\n",
-    "    \"\"\"\n",
-    "    portfolio = total_portfolio(weights, portfolio)\n",
-    "    # Media y desviación típica de los retornos anualizados \n",
-    "    portfolio = portfolio.values\n",
-    "    mean = portfolio.mean() * timeframe\n",
-    "    std = portfolio.std() * np.sqrt(timeframe)\n",
-    "    return mean / std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sortino_function(weights, portfolio, timeframe=252):\n",
-    "    \"\"\"\n",
-    "    Output:\n",
-    "        Métrica del ratio de Sharpe\n",
-    "    Inputs:\n",
-    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
-    "        timeframe (type int): Factor de anualización\n",
-    "    \"\"\"\n",
-    "    portfolio = total_portfolio(weights, portfolio)\n",
-    "    # Tomar valores a la baja\n",
-    "    portfolio = portfolio.values\n",
-    "    downward = portfolio[portfolio < 0]\n",
-    "    mean = portfolio.mean() * timeframe\n",
-    "    std = downward.std() * np.sqrt(timeframe)\n",
-    "    return mean / std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def drawdown_function(weights, portfolio):\n",
-    "    \"\"\"\n",
-    "    Output: \n",
-    "        Drawdown\n",
-    "    Inputs:\n",
-    "        portfolio (type dataframe pandas): Retornos de la cartera\n",
-    "    \"\"\"\n",
-    "    portfolio = total_portfolio(weights, portfolio)\n",
-    "    # Calcular el producto acumulado de los rendimientos\n",
-    "    cum_rets = (portfolio + 1).cumprod()\n",
-    "    # Calcular el máximo producto acumulado\n",
-    "    running_max = np.maximum.accumulate(cum_rets.dropna())\n",
-    "    running_max[running_max < 1] = 1\n",
-    "    # Calcular el drawdown\n",
-    "    drawdown = (cum_rets / running_max - 1)\n",
-    "    return drawdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def VaR_function(theta, mu, sigma):\n",
-    "    \"\"\"\n",
-    "    Output:\n",
-    "        VaR\n",
-    "    Inputs:\n",
-    "        theta (type float): umbral del error en %\n",
-    "        mu (type float): retorno esperado de la cartera\n",
-    "        sigma (type float): volatilidad de la cartera\n",
-    "    \"\"\"\n",
-    "    # Número de simulaciones\n",
-    "    n = 100000\n",
-    "    # Encontrar los valores para el umbral de error theta\n",
-    "    t = int(n * theta)\n",
-    "    # Crear un vector con n simulaciones de la ley normal\n",
-    "    vec = pd.DataFrame(np.random.normal(mu, sigma, size=(n,)),\n",
-    "                       columns=['Simulations'])\n",
-    "    # Ordena los valores y encuentra el valor theta%\n",
-    "    var = vec.sort_values(by=\"Simulations\").iloc[t].values[0]\n",
-    "    return var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cVaR_function(theta, mu, sigma):\n",
-    "    \"\"\"\n",
-    "    Output:\n",
-    "        cVaR\n",
-    "    Inputs:\n",
-    "        theta (type float): umbral del error en %\n",
-    "        mu (type float): retorno esperado de la cartera\n",
-    "        sigma (type float): volatilidad de la cartera\n",
-    "    \"\"\"\n",
-    "    # Número de simulaciones\n",
-    "    n = 100000\n",
-    "    # Encontrar los valores para el umbral de error theta\n",
-    "    t = int(n * theta)\n",
-    "    # Crear un vector con n simulaciones de la ley normal\n",
-    "    vec = pd.DataFrame(np.random.normal(mu, sigma, size=(n,)),\n",
-    "                       columns=['Simulations'])\n",
-    "    # Ordena los valores y encuentra el valor theta%\n",
-    "    cvar = vec.sort_values(by=\"Simulations\").iloc[0:t, :].mean().values[0]\n",
-    "    return cvar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def CR_function(weights, portfolio, benchmark):\n",
-    "    \"\"\"\n",
-    "    Output:\n",
-    "        Métrica de la contribución al riesgo\n",
-    "    Input:\n",
-    "        weights (type pandas.DataFrame): Pesos de la cartera\n",
-    "        portfolio (type pandas.DataFrame): Retornos de los activos\n",
-    "        benchmark (type pandas.DataFrame): Retornos del índice de referencia\n",
-    "    \"\"\"\n",
-    "    # Calcular la contribución al riesgo de cada activo\n",
-    "    crs = []\n",
-    "    for asset in weights.index.to_list():\n",
-    "        cr = beta_function(weights.loc[asset].to_frame().T, portfolio[asset].to_frame(), benchmark) * weights.iloc[i]\n",
-    "        crs.append(cr)\n",
-    "    # Normalizar por la suma de la contribución al riesgo\n",
-    "    return crs / np.sum(crs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def backtest_function(weights, portfolio, benchmark, timeframe=252):\n",
-    "    \"\"\"\n",
-    "    Output:\n",
-    "        Métricas\n",
-    "    Input:\n",
-    "        weights (type pandas.DataFrame): Pesos de la cartera\n",
-    "        portfolio (type pandas.DataFrame): Retornos de los activos\n",
-    "        benchmark (type pandas.DataFrame): Retornos del índice de referencia\n",
-    "        timeframe (type int): Factor de anualización\n",
-    "    \"\"\"\n",
-    "    # Calcular la BETA\n",
-    "    beta = beta_function(weights, portfolio, benchmark)\n",
-    "    # Calcular el ALPHA\n",
-    "    alpha = alpha_function(weights, portfolio, benchmark)\n",
-    "    # Calcular el Ratio de Sharpe\n",
-    "    sharpe = sharpe_function(weights, portfolio)\n",
-    "    # Calcular el Ratio de Sortino\n",
-    "    sortino = sortino_function(weights, portfolio)\n",
-    "    # Calcular el Drawdown\n",
-    "    drawdown = drawdown_function(weights, portfolio)\n",
-    "    # Calcular el CR\n",
-    "    cr = CR_function(weights, portfolio, benchmark)\n",
-    "    # Calcular el VaR\n",
-    "    portfolio = total_portfolio(weights, portfolio)\n",
-    "    mean = portfolio.mean() * timeframe\n",
-    "    std = portfolio.std() * np.sqrt(timeframe)\n",
-    "    theta = 0.05\n",
-    "    var = VaR_function(theta, mean, std) * 100.\n",
-    "    # Calcular el cVaR\n",
-    "    cvar = cVaR_function(theta, mean, std) * 100.\n",
-    "\n",
-    "    # Print de los resultados\n",
-    "    portfolio_weights = \"\\n\\t\" + \"\\n\\t\".join(f'{index}: {item*100:.2f}%' for index, item in weights['Weights'].items())\n",
-    "    print(f\"\"\"\n",
-    "    __________________________________________________\n",
-    "    Portfolio: {portfolio_weights}\n",
-    "    __________________________________________________\n",
-    "    Beta: {np.round(beta, 3)}\n",
-    "    Alpha: {np.round(alpha, 3)}\n",
-    "    Sharpe: {np.round(sharpe, 3)}\n",
-    "    Sortino: {np.round(sortino, 3)}\n",
-    "    ___________________________________________________\n",
-    "    VaR: {np.round(var, 3)}\n",
-    "    cVaR: {np.round(cvar, 3)}\n",
-    "    ___________________________________________________\n",
-    "    \"\"\")\n",
-    "    columns = weights.index.to_list()\n",
-    "    # Visualizaciones gráficas\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(portfolio.cumsum().sum(axis=1)*100.)\n",
-    "    plt.title(\"Retornos acumulados\", size=15)\n",
-    "    plt.ylabel(\"%\", size=15)\n",
-    "    plt.show()\n",
-    "\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.fill_between(drawdown.index, drawdown.iloc[:, 0]*100., 0, color='#E95751')\n",
-    "    plt.title(\"Drawdown\", size=15)\n",
-    "    plt.ylabel(\"%\", size=15)\n",
-    "    plt.show()\n",
-    "\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.bar(columns, cr.flatten()*100., color='#B96553')\n",
-    "    plt.title('Contribución al riesgo del portfolio', size=15)\n",
-    "    plt.ylabel('%', size=15)\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
